css/style.css
/* ... */
      .owl-carousel .owl-dots .owl-dot:hover, .owl-carousel .owl-dots .owl-dot:focus {
        outline: none !important; }
      .owl-carousel .owl-dots .owl-dot.active {
        background: #b3b3b3; }
  .owl-carousel.home-slider {
    position: relative;
    height: 750px;
    z-index: 0; }
    .owl-carousel.home-slider .slider-item {
      background-size: cover;
      background-repeat: no-repeat;
      background-position: center center;
      height: 750px;
      position: relative;
      z-index: 0; }
      @media (max-width: 1199.98px) {
        .owl-carousel.home-slider .slider-item {
          background-position: center center !important; } }
      .owl-carousel.home-slider .slider-item .overlay {
        position: absolute;
        top: 0;
        bottom: 0;
        left: 0;
        right: 0;
        background: #000000;
        opacity: 0; }
      .owl-carousel.home-slider .slider-item .slider-text {
        height: 750px;
        z-index: 0; }
        @media (max-width: 991.98px) {
          .owl-carousel.home-slider .slider-item .slider-text {
            text-align: center; } }
        .owl-carousel.home-slider .slider-item .slider-text .one-third {
          width: 60%;
          position: relative;
          z-index: -1; }
          .owl-carousel.home-slider .slider-item .slider-text .one-third .overlay {
            position: absolute;
            top: 0;
            bottom: 0;
            left: 0;
            right: 0;
            background: #000000;
            opacity: 0; }
          @media (max-width: 1199.98px) {
            .owl-carousel.home-slider .slider-item .slider-text .one-third {
              width: 85%; } }
          @media (max-width: 991.98px) {
            .owl-carousel.home-slider .slider-item .slider-text .one-third {
              width: 100%;
              z-index: 0; }
              .owl-carousel.home-slider .slider-item .slider-text .one-third .overlay {
                opacity: .3; }
              .owl-carousel.home-slider .slider-item .slider-text .one-third:after {
                opacity: 0; } }
        .owl-carousel.home-slider .slider-item .slider-text .one-forth {
          width: 50%;
          position: relative; }
          @media (min-width: 768px) {
            .owl-carousel.home-slider .slider-item .slider-text .one-forth {
              position: absolute;
              top: 0;
              left: 0;
              bottom: 0;
              right: 0;
              width: 1200px;
              margin: 0 auto; } }
          @media (max-width: 991.98px) {
            .owl-carousel.home-slider .slider-item .slider-text .one-forth {
              width: 100%;
              position: absolute;
              top: 0;
              left: 0;
              right: 0;
              bottom: 0;
              z-index: 1;
              padding: 1em; } }
          .owl-carousel.home-slider .slider-item .slider-text .one-forth .text {
            width: 100%; }
            @media (min-width: 992px) {
              .owl-carousel.home-slider .slider-item .slider-text .one-forth .text {
                position: absolute;
                top: 50%;
                left: 0;
                -webkit-transform: translateY(-50%);
                -ms-transform: translateY(-50%);
                transform: translateY(-50%);
                right: 0;
                max-width: 50%;
                padding-left: 45px;
                padding-right: 3em; } }
        .owl-carousel.home-slider .slider-item .slider-text .subheading {
          color: #000000;
          font-weight: 600;
          font-size: 14px;
          letter-spacing: 3px;
          text-transform: uppercase;
          color: #ffbd39; }
        .owl-carousel.home-slider .slider-item .slider-text .text {
          position: relative;
          z-index: 1; }
        .owl-carousel.home-slider .slider-item .slider-text h1 {
          font-size: 60px;
          color: #fff;
          line-height: 1.2;
          font-weight: 800; }
          .owl-carousel.home-slider .slider-item .slider-text h1 span {
            font-weight: 800;
            color: #ffbd39; }
          @media (max-width: 991.98px) {
            .owl-carousel.home-slider .slider-item .slider-text h1 {
              color: #fff;
              font-size: 50px; } }
          @media (max-width: 767.98px) {
            .owl-carousel.home-slider .slider-item .slider-text h1 {
              font-size: 40px; } }
        .owl-carousel.home-slider .slider-item .slider-text h2 {
          font-size: 30px;
          font-weight: 400; }
          @media (max-width: 991.98px) {
            .owl-carousel.home-slider .slider-item .slider-text h2 {
              color: #fff; } }
        .owl-carousel.home-slider .slider-item .slider-text p {
          color: rgba(0, 0, 0, 0.8);
          font-weight: 400; }
          @media (max-width: 991.98px) {
            .owl-carousel.home-slider .slider-item .slider-text p {
              color: rgba(255, 255, 255, 0.7);
              font-size: 23px; } }
        .owl-carousel.home-slider .slider-item .slider-text .btn-custom {
          bordeR: 1px solid #ffbd39;
          padding: 5px 20px;
          text-transform: uppercase;
          font-size: 12px;
          letter-spacing: 3px; }
    .owl-carousel.home-slider .owl-nav {
      position: absolute;
      bottom: 60px !important;
      left: 0;
      right: 0;
      margin: 0 auto; }
      @media (max-width: 991.98px) {
        .owl-carousel.home-slider .owl-nav {
          display: none; } }
      .owl-carousel.home-slider .owl-nav .owl-prev,
      .owl-carousel.home-slider .owl-nav .owl-next {
        position: absolute;
        width: 60px;
        height: 60px;
        background: #fff !important;
        -moz-transition: all 0.7s ease;
        -o-transition: all 0.7s ease;
        -webkit-transition: all 0.7s ease;
        -ms-transition: all 0.7s ease;
        transition: all 0.7s ease;
        opacity: 1; }
/* ... */

